--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,119 +1,58 @@
+<!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Pathfinder</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/mobile.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-          integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
-          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-          crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
-            integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
-            crossorigin=""></script>
-</head>
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
+<head th:replace="fragments/commons::head"></head>
 <body class="bg-dark">
 <div class="wrapper">
-    <!-- Navigation -->
-    <header>
-        <nav class="main-nav text-warning">
-            <ul>
-                <li>
-                    <a class="bg-info text-white" href="/">Home</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Login</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Register</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">PE</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Pipe</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">P</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Admin</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Admin</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Admin</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Admin</a>
-                </li>
-                <li>
-                    <a class="bg-info text-white" href="/">Admin</a>
-                </li>
 
-                <li>
-                    <a class="bg-info text-white" href="/">Logout</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <header th:replace="fragments/commons::nav"></header>
 
-    <!-- Top Container -->
-    <!--    <section class="top-container">-->
-    <!--        <div class="showcase">-->
-    <!--            <h1>Find amazing routes</h1>-->
-    <!--            <p>Sick of staying at home, sick of limitations? Be free! Find a route and enjoy nature!</p>-->
-    <!--            <a href="/routes" class="btn">To routes</a>-->
-    <!--        </div>-->
-    <!--        <div class="top-box top-box-a">-->
-    <!--            <h4>Времето в София</h4>-->
-    <!--            <h4><span id="box-a-temp">15</span><span>&#8451;</span></h4>-->
-    <!--            <img id="box-a-img" src="/images/sun.png" height="150px" alt="">-->
-    <!--        </div>-->
-    <!--        <div class="top-box top-box-b">-->
-    <!--            <h4>Времето в Созопол</h4>-->
-    <!--            <h4><span id="box-b-temp">27</span><span>&#8451;</span></h4>-->
-    <!--            <img id="box-b-img" src="/images/cloudy.png" height="150px" alt="">-->
-    <!--        </div>-->
-    <!--    </section>-->
 
-    <!-- Boxes Section -->
-    <!--    <section class="boxes">-->
-    <!--        <a href="/" class="main-btn" >-->
-    <!--            <div class="box">-->
-    <!--                <img src="/images/pedestrian.png" height="150px" alt="">-->
-    <!--                <h3>Pedestrian</h3>-->
-    <!--                <p>Is this your Leg day?</p>-->
-    <!--            </div>-->
-    <!--        </a>-->
-    <!--        <a href="/" class="main-btn" >-->
-    <!--            <div class="box">-->
-    <!--                <img src="/images/bicycle.png" height="150px" alt="">-->
-    <!--                <h3>Bicycle</h3>-->
-    <!--                <p>When you want to be one with nature!</p>-->
-    <!--            </div>-->
-    <!--        </a>-->
-    <!--        <a href="/" class="main-btn" >-->
-    <!--            <div class="box">-->
-    <!--                <img src="/images/motorcycle.png" height="150px" alt="">-->
-    <!--                <h3>Motorcycle</h3>-->
-    <!--                <p>When you want the wind to blow on your face!</p>-->
-    <!--            </div>-->
-    <!--        </a>-->
-    <!--        <a href="/" class="main-btn" >-->
-    <!--            <div class="box">-->
-    <!--                <img src="/images/car.png" height="150px" alt="">-->
-    <!--                <h3>Car</h3>-->
-    <!--                <p>Going on a trip with friends?</p>-->
-    <!--            </div>-->
-    <!--        </a>-->
-    <!--    </section>-->
+    <!--     Top Container-->
+    <section class="top-container">
+        <a th:fragment="welcome" class="site-header text-warning">
+            <h2 sec:authorize="!isAuthenticated()">WELCOME TO HYDRO CALCULATOR! PLEASE REGISTER/LOGIN.</h2>
+            <h2 sec:authorize="isAuthenticated()">Welcome,
+                <th:block sec:authentication="name"></th:block>
+                !
+            </h2>
+        </a>
+        <!--            <div class="showcase">-->
+        <!--                <h1>Find amazing routes</h1>-->
+        <!--                <p>Sick of staying at home, sick of limitations? Be free! Find a route and enjoy nature!</p>-->
+        <!--                <a href="/routes" class="btn">To routes</a>-->
+        <!--            </div>-->
+        <!--            <div class="top-box top-box-a">-->
+        <!--                <h4>Времето в София</h4>-->
+        <!--                <h4><span id="box-a-temp">15</span><span>&#8451;</span></h4>-->
+        <!--                <img id="box-a-img" src="/images/sun.png" height="150px" alt="">-->
+        <!--            </div>-->
+        <!--            <div class="top-box top-box-b">-->
+        <!--                <h4>Времето в Созопол</h4>-->
+        <!--                <h4><span id="box-b-temp">27</span><span>&#8451;</span></h4>-->
+        <!--                <img id="box-b-img" src="/images/cloudy.png" height="150px" alt="">-->
+        <!--            </div>-->
+    </section>
+    <!--     Boxes Section-->
+    <section class="boxes mt-5">
+
+        <a href="/" class="main-btn" sec:authorize="isAuthenticated()">
+            <div class="box">
+                <img src="/images/bicycle.png" height="150px" alt="">
+                <h3>MY CALCULATIONS</h3>
+                <p>RESULT HISTORY</p>
+            </div>
+        </a>
+        <a href="/" class="main-btn bg-dark text-info" sec:authorize="!isAuthenticated()">
+            <div class="box bg-dark text-info">
+                <img src="/images/depositphotos_5529156-stock-photo-clean-drinking-water.jpg" height="200px" alt="">
+                <h3>ABOUT HYDROCLACULATOR</h3>
+                <p>ABOUT</p>
+            </div>
+        </a>
+    </section>
 
     <!-- Info Section -->
     <!--    <section class="road">-->
@@ -136,13 +75,7 @@
 </div>
 <!-- Wrapper Ends -->'
 
-<footer class="footer bg-blur rounded bg-dark mt-5">
-    <div class="container-fluid text-center">
-        <div class="h5 text-info bg-dark">
-            HYDROCALCULATOR created by Malmsuite 2021
-        </div>
-    </div>
-</footer>
+<footer th:replace="fragments/commons::footer"></footer>
 
 </body>
 
