--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -45,7 +45,7 @@
             <ul>
                 <th:block>
                     <li>
-                        <a sec:authorize="isAuthenticated()" class="bg-info text-white" href="/">Calc by DI</a>
+                        <a sec:authorize="isAuthenticated()" class="bg-info text-white" th:href="@{/calc-pipe-DI}">Calc by DI</a>
                     </li>
                     <li>
                         <a sec:authorize="isAuthenticated()" class="bg-info text-white" href="/">Calc PE PN10 </a>
