--- a/src/main/resources/templates/pipe-PE-exit.html
+++ b/src/main/resources/templates/pipe-PE-exit.html
@@ -18,40 +18,42 @@
             Внимание: ниска скорост на водата! </strong>
     </h5>
 
-    <div th:object="${result}" class="container align-content-center bg-dark p-2 mt-3">
+    <div th:object="${resultPePipe}" class="container align-content-center bg-dark p-2 mt-3">
         <div class="row align-content-center bg-dark">
             <li class="list-group-item bg-dark text-warning">
                 <h6>
                     <div class="card-text bg-dark text-red align-content-center"><span
-                            th:text="| Вътрешен диаметър: DI = *{#numbers.formatDecimal(pipeInternalDiameter,1,2)}mm;|">di</span>
+                            th:text="| Номинален диаметър: *{pipeNominalDiameter};|">dn</span>
                     </div>
                     <br>
-
+                    <div class="card-text bg-dark text-red align-content-center"><span
+                            th:text="| Номинално налягане: *{nominalPressure};|">pn</span>
+                    </div>
+                    <br>
+                    <div class="card-text bg-dark text-red align-content-center"><span
+                            th:text="| Вътрешен диаметър: DI = *{#numbers.formatDecimal(pipeInternalDiameter,1,1)}mm;|">di</span>
+                    </div>
+                    <br>
                     <div class="card-text bg-dark text-red align-content-center"><span
                             th:text="| Грапавина: k = *{#numbers.formatDecimal(roughnessHeightInMm,1,2)}mm;|">грапавина</span>
                     </div>
                     <br>
-
                     <div class="card-text bg-dark text-red align-content-center"><span
                             th:text="| Дължина на тръбопровода: L = *{#numbers.formatDecimal(pipeTotalLength,1,2)}m;|">дължина</span>
                     </div>
                     <br>
-
                     <div class="card-text bg-dark text-red align-content-center"><span
                             th:text="| Водно количество: Q = *{#numbers.formatDecimal(flowInLitersPerSecond,1,2)}l/s;|">водно количество</span>
                     </div>
                     <br>
-
                     <div class="card-text bg-dark text-red align-content-center"><span
                             th:text="| Скорост: V = *{#numbers.formatDecimal(velocityInMetersPerSecond,1,2)}m/s;|">скорост</span>
                     </div>
                     <br>
-
                     <div class="card-text bg-dark text-red align-content-center"><span
                             th:text="| Хидравличен наклон: i = *{#numbers.formatDecimal(lossesPerMeter,1,5)}m/m;|">хидравличен наклон</span>
                     </div>
                     <br>
-
                     <div class="card-text bg-dark text-red align-content-center"><span
                             th:text="| Общо загуби на напор: H = *{#numbers.formatDecimal(totalLosses,1,2)}m.|">общо загуби</span>
                     </div>
@@ -62,7 +64,7 @@
     </div>
 
     <a class="btn btn-dark btn-block btn-warning bg-dark text-warning align-content-center mt-5 border-warning"
-       href="/calc-pipe-DI"
+       href="/calc-pipe-PVC-O"
        role="button">ИЗЧИСЛИ ОТНОВО</a>
 
     <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-5 border-info" href="/"
