--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -37,28 +37,40 @@
                            th:href="@{/users/login}">Login</a>
                     </li>
                     <li>
-                        <a sec:authorize="!isAuthenticated()" class="bg-info text-white" href="/">Test</a>
+                        <a sec:authorize="!isAuthenticated()" class="bg-info text-white" th:href="@{/calc-pipe-DI}">Calc
+                            by DI</a>
                     </li>
                 </th:block>
             </ul>
 
             <ul>
-                <th:block>
+                <th:block sec:authorize="isAuthenticated()">
                     <li>
-                        <a sec:authorize="isAuthenticated()" class="bg-info text-white" th:href="@{/calc-pipe-DI}">Calc by DI</a>
+                        <a class="bg-info text-white" th:href="@{/calc-pipe-DI}">По вътрешен диаметър</a>
                     </li>
                     <li>
-                        <a sec:authorize="isAuthenticated()" class="bg-info text-white" href="/">Calc PE PN10 </a>
+                        <a class="bg-info text-white" th:href="@{/calc-pipe-PE}">PE</a>
                     </li>
                     <li>
-                        <a sec:authorize="isAuthenticated()" class="bg-info text-white" href="/">Calc PE PN16</a>
+                        <a class="bg-info text-white" th:href="@{/calc-pipe-PVC-O}" >PVC-O</a>
                     </li>
                     <li>
-                        <a sec:authorize="isAuthenticated()" class="bg-info text-white" th:href="@{/logout-page}">LOGOUT</a>
+                        <a class="bg-info text-white" href="/">PP</a>
                     </li>
-
+                    <li>
+                        <a class="bg-info text-white" href="/">СТЪКЛОПЛАСТОВИ</a>
+                    </li>
+                    <li>
+                        <a class="bg-info text-white" href="/">ЧУГУНЕНИ</a>
+                    </li>
+                    <li>
+                        <a class="bg-info text-white" href="/">БЕТОНОВИ</a>
+                    </li>
+                    <li>
+                        <a class="bg-info text-white"
+                           th:href="@{/logout-page}">LOGOUT</a>
+                    </li>
                 </th:block>
-
             </ul>
         </nav>
     </header>
