--- a/src/main/resources/templates/logout-page.html
+++ b/src/main/resources/templates/logout-page.html
@@ -8,18 +8,13 @@
 <main class="p-5 align-content-center bg-dark my-register-div">
 
     <div class="d-flex justify-content-center">
-
         <div class="row g-3 align-items-center">
-
             <section class="align-content-center">
                 <form sec:authorize="isAuthenticated()" th:action="@{/users/logout}" th:method="post">
-                    <input class="nav-link text-warning bg-info" type="submit" value="Logout">
+                    <input class="nav-link text-warning bg-info" type="submit" value="LOGOUT">
                 </form>
             </section>
-
-
         </div>
-
     </div>
 
     <a class="btn btn-dark btn-block btn-warning bg-dark text-warning align-content-center mt-5" href="/" role="button">BACK</a>
