--- a/src/main/resources/templates/pipe-PE-input.html
+++ b/src/main/resources/templates/pipe-PE-input.html
@@ -10,8 +10,8 @@
 
     <div class="container bg-dark rounded p-0 mt-5 w-75">
         <form
-                th:action="@{/calc-pipe-DI/post}"
-                th:object="${pipeDIBindingModel}"
+                th:action="@{/calc-pipe-PE/post}"
+                th:object="${pePipeBindingModel}"
                 th:method="POST"
                 class=" text-center text-light">
 
@@ -19,10 +19,6 @@
 <!--                <strong class="bg-blur rounded text-danger">-->
 <!--                    Standard discount should be lesser than vips! </strong>-->
 <!--            </h3>-->
-<!--            private double flowInLitersPerSeconds;-->
-<!--            private double DI;-->
-<!--            private double length;-->
-<!--            private double roughnessHeightInMm;-->
 
             <div class="form-group row text-info">
                 <label for="flow" class="col-sm-2 col-form-label">Водно количество, l/s</label>
@@ -34,20 +30,6 @@
                             aria-describedby="nameHelpInline" placeholder="Водно количество">
                     <small id="flowHelpInline" class="invalid-feedback bg-danger text-light rounded">
                         Водното количество трябва да е по-голямо от нула.
-                    </small>
-                </div>
-            </div>
-
-            <div class="form-group row text-info">
-                <label for="di" class="col-sm-2 col-form-label">Вътрешен диаметър, mm</label>
-                <div class="col-sm-10">
-                    <input
-                            th:field="*{DI}"
-                            th:errorclass="is-invalid"
-                            type="text" class="form-control" id="di"
-                            aria-describedby="nameHelpInline" placeholder="Вътрешен диаметър">
-                    <small id="diHelpInline" class="invalid-feedback bg-danger text-light rounded">
-                        Вътрешният диаметър трябва да е по-голям от нула.
                     </small>
                 </div>
             </div>
@@ -66,28 +48,49 @@
                 </div>
             </div>
 
-<!--            <div class="form-group row text-warning">-->
-<!--                <label for="room_type" class="col-sm-2 col-form-label">Room type</label>-->
-<!--                <div class="col-sm-10">-->
-<!--                    <select-->
-<!--                            th:field="*{room}"-->
-<!--                            th:errorclass="is-invalid"-->
-<!--                            id="room_type" name="room_type" class="custom-select"-->
-<!--                            aria-describedby="categoryHelpInline">-->
-<!--                        <option value="" selected>Room type</option>-->
-<!--                        <option-->
-<!--                                th:each="r:${T(com.example.myproject.model.entities.enums.RoomEnum).values()}"-->
-<!--                                th:value="${r}"-->
-<!--                                th:text="${r}"-->
-<!--                                value="">Double-->
-<!--                        </option>-->
+            <div class="form-group row text-info">
+                <label for="dn" class="col-sm-2 col-form-label">DN</label>
+                <div class="col-sm-10">
+                    <select
+                            th:field="*{pePipeEnum}"
+                            th:errorclass="is-invalid"
+                            id="dn" name="DN" class="custom-select"
+                            aria-describedby="categoryHelpInline">
+                        <option value="" selected>DN</option>
+                        <option
+                                th:each="DN:${T(com.example.hydrocalc.model.enums.PePipeEnum).values()}"
+                                th:value="${DN}"
+                                th:text="${DN}"
+                                value="">DN
+                        </option>
+                    </select>
+                    <small id="dnHelpInline" class="invalid-feedback bg-danger text-light rounded">
+                        Избери DN.
+                    </small>
+                </div>
+            </div>
 
-<!--                    </select>-->
-<!--                    <small id="categoryHelpInline" class="invalid-feedback bg-danger text-light rounded">-->
-<!--                        You must select roomType.-->
-<!--                    </small>-->
-<!--                </div>-->
-<!--            </div>-->
+            <div class="form-group row text-info">
+                <label for="dn" class="col-sm-2 col-form-label">PN</label>
+                <div class="col-sm-10">
+                    <select
+                            th:field="*{nominalPressure}"
+                            th:errorclass="is-invalid"
+                            id="pn" name="PN" class="custom-select"
+                            aria-describedby="categoryHelpInline">
+                        <option value="" selected>PN</option>
+                        <option
+                                th:each="PN:${T(com.example.hydrocalc.model.enums.NominalPressure).values()}"
+                                th:value="${PN}"
+                                th:text="${PN}"
+                                value="">PN
+                        </option>
+                    </select>
+                    <small id="pnHelpInline" class="invalid-feedback bg-danger text-light rounded">
+                        Избери PN.
+                    </small>
+                </div>
+            </div>
 
             <div class="form-group row text-info">
                 <label for="roughnessHeightInMm" class="col-sm-2 col-form-label">Грапавина, mm</label>
