--- a/src/main/resources/templates/my-calculations.html
+++ b/src/main/resources/templates/my-calculations.html
@@ -12,56 +12,29 @@
     <div th:each="mc : ${myCalculations}" th:object="${mc}" class="container align-content-center bg-dark p-2 mt-0">
         <div class="row align-content-center bg-dark">
             <li class="list-group-item bg-dark text-warning">
-<!--                private double lossesPerMeter;-->
-<!--                private double totalLosses;-->
-<!--                private boolean velocityHigh;-->
-<!--                private boolean velocityLow;-->
-<!--                private boolean canDelete;-->
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|Q = *{flowInLitersPerSecond} l/s:|"></span></div>
-                <br>
+                        th:text="| - *{createdOn}|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|DN*{pipeNominalDiameter}:|"></span></div>
-                <br>
+                        th:text="| - Q = *{flowInLitersPerSecond} l/s;|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|PN*{nominalPressure}:|"></span></div>
-                <br>
+                        th:text="| - *{pipeNominalDiameter};|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|DI = *{pipeInternalDiameter}:|"></span></div>
-                <br>
+                        th:text="| - *{nominalPressure};|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|L = *{pipeTotalLength}:|"></span></div>
-                <br>
+                        th:text="| - DI = *{pipeInternalDiameter};|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|PN: *{pipeInternalDiameter}:|"></span></div>
-                <br>
+                        th:text="| - L = *{pipeTotalLength};|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|V = *{velocityInMetersPerSecond} m/s|"></span></div>
-                <br>
+                        th:text="| - V = *{velocityInMetersPerSecond} m/s;|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|k = *{roughnessHeightInMm} mm|"></span></div>
-                <br>
+                        th:text="| - k = *{roughnessHeightInMm} mm;|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|i = *{lossesPerMeter} m/m|"></span></div>
-                <br>
+                        th:text="| - i = *{lossesPerMeter} m/m;|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
-                        th:text="|Hзаг = *{totalLosses} m|"></span></div>
-                <br>
-
-
-                <!--                <div class="card-text bg-dark text-info"><span-->
-                <!--                        th:text="|If you book for more than: *{stay} days,-->
-                <!--                        you get a discount of *{#numbers.formatDecimal(discount, 1, 0)}% from the total sum.|">Discount</span>-->
-                <!--                </div>-->
-                <!--                <div class="card-text bg-dark text-info"><span th:text="|If you have more than 3 bookings in our hotel so far,-->
-                <!--                 you become a vip customer and no matter how long you will stay, you get a discount of *{#numbers.formatDecimal(vipDiscount, 1,0)}% from the total sum.|">vip Discount</span>-->
-                <!--                </div><br>-->
-                <!--                <div class="card-text bg-dark text-info"><span-->
-                <!--                        th:text="|Additionl notes:|">description</span></div>-->
-                <!--                <div class="card-text bg-dark text-info"><span-->
-                <!--                        th:text="|*{description}|">description</span></div>-->
+                        th:text="| - Hзаг = *{totalLosses} m.|"></span></div>
             </li>
         </div>
+
         <th:block th:if="*{canDelete}">
             <form th:action="@{/my-calculations/remove/{id}(id = *{id})}" th:method="delete"><input
                     class="nav-link text-danger bg-dark" type="submit" value="REMOVE!">
