--- a/src/main/resources/templates/my-calculations.html
+++ b/src/main/resources/templates/my-calculations.html
@@ -17,6 +17,8 @@
                 <div class="card-text bg-dark text-red align-content-center"><span
                         th:text="| - Q = *{flowInLitersPerSecond} l/s;|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
+                        th:text="| - *{waterTemperature};|"></span></div>
+                <div class="card-text bg-dark text-red align-content-center"><span
                         th:text="| - *{pipeNominalDiameter};|"></span></div>
                 <div class="card-text bg-dark text-red align-content-center"><span
                         th:text="| - *{nominalPressure};|"></span></div>
