--- a/src/main/resources/templates/pipe-ID-input.html
+++ b/src/main/resources/templates/pipe-ID-input.html
@@ -15,14 +15,14 @@
                 th:method="POST"
                 class=" text-center text-light">
 
-<!--            <h3 th:if="${standardDiscountBiggerThanVip} == true" class="mt-5 text-center">-->
-<!--                <strong class="bg-blur rounded text-danger">-->
-<!--                    Standard discount should be lesser than vips! </strong>-->
-<!--            </h3>-->
-<!--            private double flowInLitersPerSeconds;-->
-<!--            private double DI;-->
-<!--            private double length;-->
-<!--            private double roughnessHeightInMm;-->
+            <!--            <h3 th:if="${standardDiscountBiggerThanVip} == true" class="mt-5 text-center">-->
+            <!--                <strong class="bg-blur rounded text-danger">-->
+            <!--                    Standard discount should be lesser than vips! </strong>-->
+            <!--            </h3>-->
+            <!--            private double flowInLitersPerSeconds;-->
+            <!--            private double DI;-->
+            <!--            private double length;-->
+            <!--            private double roughnessHeightInMm;-->
 
             <div class="form-group row text-info">
                 <label for="flow" class="col-sm-2 col-form-label">Водно количество, l/s</label>
@@ -66,28 +66,28 @@
                 </div>
             </div>
 
-<!--            <div class="form-group row text-warning">-->
-<!--                <label for="room_type" class="col-sm-2 col-form-label">Room type</label>-->
-<!--                <div class="col-sm-10">-->
-<!--                    <select-->
-<!--                            th:field="*{room}"-->
-<!--                            th:errorclass="is-invalid"-->
-<!--                            id="room_type" name="room_type" class="custom-select"-->
-<!--                            aria-describedby="categoryHelpInline">-->
-<!--                        <option value="" selected>Room type</option>-->
-<!--                        <option-->
-<!--                                th:each="r:${T(com.example.myproject.model.entities.enums.RoomEnum).values()}"-->
-<!--                                th:value="${r}"-->
-<!--                                th:text="${r}"-->
-<!--                                value="">Double-->
-<!--                        </option>-->
+            <!--            <div class="form-group row text-warning">-->
+            <!--                <label for="room_type" class="col-sm-2 col-form-label">Room type</label>-->
+            <!--                <div class="col-sm-10">-->
+            <!--                    <select-->
+            <!--                            th:field="*{room}"-->
+            <!--                            th:errorclass="is-invalid"-->
+            <!--                            id="room_type" name="room_type" class="custom-select"-->
+            <!--                            aria-describedby="categoryHelpInline">-->
+            <!--                        <option value="" selected>Room type</option>-->
+            <!--                        <option-->
+            <!--                                th:each="r:${T(com.example.myproject.model.entities.enums.RoomEnum).values()}"-->
+            <!--                                th:value="${r}"-->
+            <!--                                th:text="${r}"-->
+            <!--                                value="">Double-->
+            <!--                        </option>-->
 
-<!--                    </select>-->
-<!--                    <small id="categoryHelpInline" class="invalid-feedback bg-danger text-light rounded">-->
-<!--                        You must select roomType.-->
-<!--                    </small>-->
-<!--                </div>-->
-<!--            </div>-->
+            <!--                    </select>-->
+            <!--                    <small id="categoryHelpInline" class="invalid-feedback bg-danger text-light rounded">-->
+            <!--                        You must select roomType.-->
+            <!--                    </small>-->
+            <!--                </div>-->
+            <!--            </div>-->
 
             <div class="form-group row text-info">
                 <label for="roughnessHeightInMm" class="col-sm-2 col-form-label">Грапавина, mm</label>
@@ -99,6 +99,28 @@
                     </textarea>
                     <small id="descriptionHelpInline" class="invalid-feedback bg-danger text-light rounded">
                         Грапавината трябва да е по-голяма от нула.
+                    </small>
+                </div>
+            </div>
+
+            <div class="form-group row text-info">
+                <label for="waterTemp" class="col-sm-2 col-form-label">Темп. на водата в градуси целзий</label>
+                <div class="col-sm-10">
+                    <select
+                            th:field="*{waterTemperature}"
+                            th:errorclass="is-invalid"
+                            id="waterTemp" name="waterTemp" class="custom-select"
+                            aria-describedby="categoryHelpInline">
+                        <option value="" selected>Tемпература на водата</option>
+                        <option
+                                th:each="t:${T(com.example.hydrocalc.model.enums.WaterTemperatureEnum).values()}"
+                                th:value="${t}"
+                                th:text="${t}"
+                                value="">T
+                        </option>
+                    </select>
+                    <small id="dnHelpInline" class="invalid-feedback bg-danger text-light rounded">
+                        Избери температура на водата.
                     </small>
                 </div>
             </div>
