--- a/src/main/resources/templates/pipe-ID-exit.html
+++ b/src/main/resources/templates/pipe-ID-exit.html
@@ -70,8 +70,16 @@
        href="/calc-pipe-DI"
        role="button">ИЗЧИСЛИ ОТНОВО</a>
 
+    <th:block sec:authorize="isAuthenticated()">
+        <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-5 border-info"
+           th:href="@{/my-calculations}"
+           role="button">КЪМ МОИТЕ ИЗЧИСЛЕНИЯ</a>
+    </th:block>
+
+
     <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-5 border-info" href="/"
-       role="button">НАЧАЛНА СТРАНИЦА</a>
+       role="button">КЪМ НАЧАЛНА СТРАНИЦА</a>
+
 
 </main>
 <footer th:replace="fragments/commons::footer"></footer>
