--- a/src/main/resources/templates/my-calculations.html
+++ b/src/main/resources/templates/my-calculations.html
@@ -39,7 +39,7 @@
 
         <th:block th:if="*{canDelete}">
             <form th:action="@{/my-calculations/remove/{id}(id = *{id})}" th:method="delete"><input
-                    class="nav-link text-danger bg-dark" type="submit" value="REMOVE!">
+                    class="nav-link text-danger bg-dark" type="submit" value="ИЗТРИЙ!">
             </form>
         </th:block>
 
