--- a/src/main/resources/templates/pipe-ID-input.html
+++ b/src/main/resources/templates/pipe-ID-input.html
@@ -66,29 +66,6 @@
                 </div>
             </div>
 
-            <!--            <div class="form-group row text-warning">-->
-            <!--                <label for="room_type" class="col-sm-2 col-form-label">Room type</label>-->
-            <!--                <div class="col-sm-10">-->
-            <!--                    <select-->
-            <!--                            th:field="*{room}"-->
-            <!--                            th:errorclass="is-invalid"-->
-            <!--                            id="room_type" name="room_type" class="custom-select"-->
-            <!--                            aria-describedby="categoryHelpInline">-->
-            <!--                        <option value="" selected>Room type</option>-->
-            <!--                        <option-->
-            <!--                                th:each="r:${T(com.example.myproject.model.entities.enums.RoomEnum).values()}"-->
-            <!--                                th:value="${r}"-->
-            <!--                                th:text="${r}"-->
-            <!--                                value="">Double-->
-            <!--                        </option>-->
-
-            <!--                    </select>-->
-            <!--                    <small id="categoryHelpInline" class="invalid-feedback bg-danger text-light rounded">-->
-            <!--                        You must select roomType.-->
-            <!--                    </small>-->
-            <!--                </div>-->
-            <!--            </div>-->
-
             <div class="form-group row text-info">
                 <label for="roughnessHeightInMm" class="col-sm-2 col-form-label">Грапавина, mm</label>
                 <div class="col-sm-10">
@@ -103,23 +80,44 @@
                 </div>
             </div>
 
+<!--            <div class="form-group row text-info">-->
+<!--                <label for="waterTemp" class="col-sm-2 col-form-label">Темп. на водата в градуси целзий</label>-->
+<!--                <div class="col-sm-10">-->
+<!--                    <select-->
+<!--                            th:field="*{waterTemperature}"-->
+<!--                            th:errorclass="is-invalid"-->
+<!--                            id="waterTemp" name="waterTemp" class="custom-select"-->
+<!--                            aria-describedby="categoryHelpInline">-->
+<!--                        <option value="" selected>Tемпература на водата</option>-->
+<!--                        <option-->
+<!--                                th:each="t:${T(com.example.hydrocalc.model.enums.WaterTemperatureEnum).values()}"-->
+<!--                                th:value="${t}"-->
+<!--                                th:text="${t}"-->
+<!--                                value="">T-->
+<!--                        </option>-->
+<!--                    </select>-->
+<!--                    <small id="waterTempHelpInline" class="invalid-feedback bg-danger text-light rounded">-->
+<!--                        Избери температура на водата.-->
+<!--                    </small>-->
+<!--                </div>-->
+<!--            </div>-->
             <div class="form-group row text-info">
-                <label for="waterTemp" class="col-sm-2 col-form-label">Темп. на водата в градуси целзий</label>
+                <label for="waterTemp" class="col-sm-2 col-form-label">Температура на водата</label>
                 <div class="col-sm-10">
                     <select
-                            th:field="*{waterTemperature}"
+                            th:field="*{temperatures}"
                             th:errorclass="is-invalid"
                             id="waterTemp" name="waterTemp" class="custom-select"
                             aria-describedby="categoryHelpInline">
                         <option value="" selected>Tемпература на водата</option>
                         <option
-                                th:each="t:${T(com.example.hydrocalc.model.enums.WaterTemperatureEnum).values()}"
+                                th:each="t:${waterTemperatures}"
                                 th:value="${t}"
                                 th:text="${t}"
                                 value="">T
                         </option>
                     </select>
-                    <small id="dnHelpInline" class="invalid-feedback bg-danger text-light rounded">
+                    <small id="waterTempHelpInline" class="invalid-feedback bg-danger text-light rounded">
                         Избери температура на водата.
                     </small>
                 </div>
