adding new functionalities

--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -85,7 +85,7 @@
                     </li>
                     <li>
                         <a class="bg-info text-white"
-                           th:href="@{/logout-page}">ИЗЛЕЗ ОТ ПРИЛОЖЕНИЕТО</a>
+                           th:href="@{/logout-page}">ИЗХОД</a>
                     </li>
                 </th:block>
             </ul>
