--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,68 +9,32 @@
 
     <header th:replace="fragments/commons::nav"></header>
 
-
-    <!--     Top Container-->
     <section class="top-container">
         <a th:fragment="welcome" class="site-header text-warning mb-0">
-            <h2 sec:authorize="!isAuthenticated()">ДОБРЕ ДОШЛИ В ХИДРОКАЛКУЛАТОР!</h2>
-            <h2 sec:authorize="isAuthenticated()">Добре дошъл,
+            <h4 sec:authorize="!isAuthenticated()">ДОБРЕ ДОШЛИ В ХИДРОКАЛКУЛАТОР!</h4>
+            <h4 sec:authorize="isAuthenticated()">Добре дошъл,
                 <th:block sec:authentication="name"></th:block>
                 !
-            </h2>
+            </h4>
         </a>
-        <!--            <div class="showcase">-->
-        <!--                <h1>Find amazing routes</h1>-->
-        <!--                <p>Sick of staying at home, sick of limitations? Be free! Find a route and enjoy nature!</p>-->
-        <!--                <a href="/routes" class="btn">To routes</a>-->
-        <!--            </div>-->
-        <!--            <div class="top-box top-box-a">-->
-        <!--                <h4>Времето в София</h4>-->
-        <!--                <h4><span id="box-a-temp">15</span><span>&#8451;</span></h4>-->
-        <!--                <img id="box-a-img" src="/images/sun.png" height="150px" alt="">-->
-        <!--            </div>-->
-        <!--            <div class="top-box top-box-b">-->
-        <!--                <h4>Времето в Созопол</h4>-->
-        <!--                <h4><span id="box-b-temp">27</span><span>&#8451;</span></h4>-->
-        <!--                <img id="box-b-img" src="/images/cloudy.png" height="150px" alt="">-->
-        <!--            </div>-->
     </section>
-    <!--     Boxes Section-->
+
     <section class="boxes mt-0 mb-0">
-        <a th:href="@{/my-calculations}"  class="main-btn bg-dark text-info" sec:authorize="isAuthenticated()">
+        <a th:href="@{/my-calculations}" class="main-btn bg-dark text-info" sec:authorize="isAuthenticated()">
             <div class="box bg-dark">
                 <img src="/images/hydricalclogo.jpg" height="150px" alt="">
-                <h3>Моите изчисления</h3>
+                <h4>Моите изчисления</h4>
             </div>
         </a>
         <a href="/" class="main-btn bg-dark text-info" sec:authorize="!isAuthenticated()">
             <div class="box bg-dark text-info">
                 <img src="/images/hydricalclogo.jpg" height="150px" alt="">
-                <h3>Хидорокалкулатор формула</h3>
+                <h4>Как работи Хидрокалкулатор?</h4>
             </div>
         </a>
     </section>
 
-    <!-- Info Section -->
-    <!--    <section class="road">-->
-    <!--        <img src="/images/most-commented.jpg" alt="">-->
-    <!--        <div>-->
-    <!--            <h2>The most commented route</h2>-->
-    <!--            <p>Read more about the most commented route and do not miss the-->
-    <!--                chance to visit it and give your opinion to help other users.</p>-->
-    <!--            <a href="/" class="btn">Learn More</a>-->
-    <!--        </div>-->
-    <!--    </section>-->
-
-    <!-- Portfolio -->
-    <!--    <section class="gallery">-->
-    <!--        <img src="http://res.cloudinary.com/ch-cloud/image/upload/v1630583467/koncyanx4gqwzt9vxgx4.jpg" width="200px" height="200px" alt="">-->
-    <!--        <img src="http://res.cloudinary.com/ch-cloud/image/upload/v1630582448/oowojgn4lagybkvv20jb.jpg" width="200px" height="200px" alt="">-->
-    <!--    </section>-->
-
-    <!-- <script th:src="@{/js/weather.js}"></script> -->
 </div>
-<!-- Wrapper Ends -->'
 
 <footer th:replace="fragments/commons::footer"></footer>
 
