--- a/src/main/resources/templates/pipe-ID-input.html
+++ b/src/main/resources/templates/pipe-ID-input.html
@@ -129,8 +129,14 @@
 
     </div>
 
-    <a class="btn btn-dark btn-block btn-warning bg-dark text-warning align-content-center w-20 mt-0 mb-5"
-       href="/" role="button">НАЧАЛНА СТРАНИЦА</a>
+    <th:block sec:authorize="isAuthenticated()">
+        <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning"
+           th:href="@{/my-calculations}"
+           role="button">КЪМ МОИТЕ ИЗЧИСЛЕНИЯ</a>
+    </th:block>
+
+    <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning" href="/"
+       role="button">КЪМ НАЧАЛНА СТРАНИЦА</a>
 
 </main>
 <footer th:replace="fragments/commons::footer"></footer>
