--- a/src/main/resources/templates/pipe-ID-exit.html
+++ b/src/main/resources/templates/pipe-ID-exit.html
@@ -66,18 +66,13 @@
         </div>
     </div>
 
-    <a class="btn btn-dark btn-block btn-warning bg-dark text-warning align-content-center mt-3 border border-warning"
-       href="/calc-pipe-DI"
-       role="button">ИЗЧИСЛИ ОТНОВО</a>
+    <a th:replace="fragments/commons::calculateAgain"></a>
 
     <th:block sec:authorize="isAuthenticated()">
-        <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning"
-           th:href="@{/my-calculations}"
-           role="button">КЪМ МОИТЕ ИЗЧИСЛЕНИЯ</a>
+        <a th:replace="fragments/commons::toMyEquations"></a>
     </th:block>
 
-    <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning" href="/"
-       role="button">КЪМ НАЧАЛНА СТРАНИЦА</a>
+    <a th:replace="fragments/commons::toHomePage"></a>
 
 </main>
 <footer th:replace="fragments/commons::footer"></footer>
