--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -88,16 +88,45 @@
                            th:href="@{/logout-page}">ИЗХОД</a>
                     </li>
                 </th:block>
+
+                <th:block sec:authorize="hasRole('ADMIN')">
+                    <li>
+                        <a class="bg-info text-white" href="/">Редактирай потребител</a>
+                    </li>
+                    <li>
+                        <a class="bg-info text-white" href="/">Изтрий потребител</a>
+                    </li>
+                    <li>
+                        <a class="bg-info text-white" href="/">Браузинг история</a>
+                    </li>
+                    <li>
+                        <a class="bg-info text-white" href="/">Отзиви</a>
+                    </li>
+                </th:block>
+
             </ul>
         </nav>
     </header>
 </div>
 
+<button th:fragment="CALCULATE" type="submit" class="btn btn-dark text-info bg-dark w-20 mb-5 border border-info">ИЗЧИСЛИ</button>
+
+<a th:fragment="calculateAgain" class="btn btn-dark btn-block btn-warning bg-dark text-warning align-content-center mt-3 border border-warning"
+   href="/calc-pipe-DI"
+   role="button">ИЗЧИСЛИ ОТНОВО</a>
+
+<a th:fragment="toMyEquations" class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning"
+   th:href="@{/my-calculations}"
+   role="button">КЪМ МОИТЕ ИЗЧИСЛЕНИЯ</a>
+
+<a th:fragment="toHomePage" class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning" href="/"
+   role="button">КЪМ НАЧАЛНА СТРАНИЦА</a>
+
 
 <footer th:fragment="footer" class="footer bg-blur rounded bg-dark mt-5">
     <div class="container-fluid text-center">
         <div class="h5 text-info bg-dark">
-            <p><img class="logo align-content-center" width="30px" height="30px" src="/images/myLogo.png" alt=""></p>
+            <p><img class="logo align-content-center" width="35px" height="35px" src="/images/myLogo.png" alt=""></p>
             ХИДРОКАЛКУЛАТОР 2022
         </div>
     </div>
