--- a/src/main/resources/templates/pipe-ID-input.html
+++ b/src/main/resources/templates/pipe-ID-input.html
@@ -80,27 +80,6 @@
                 </div>
             </div>
 
-<!--            <div class="form-group row text-info">-->
-<!--                <label for="waterTemp" class="col-sm-2 col-form-label">Темп. на водата в градуси целзий</label>-->
-<!--                <div class="col-sm-10">-->
-<!--                    <select-->
-<!--                            th:field="*{waterTemperature}"-->
-<!--                            th:errorclass="is-invalid"-->
-<!--                            id="waterTemp" name="waterTemp" class="custom-select"-->
-<!--                            aria-describedby="categoryHelpInline">-->
-<!--                        <option value="" selected>Tемпература на водата</option>-->
-<!--                        <option-->
-<!--                                th:each="t:${T(com.example.hydrocalc.model.enums.WaterTemperatureEnum).values()}"-->
-<!--                                th:value="${t}"-->
-<!--                                th:text="${t}"-->
-<!--                                value="">T-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                    <small id="waterTempHelpInline" class="invalid-feedback bg-danger text-light rounded">-->
-<!--                        Избери температура на водата.-->
-<!--                    </small>-->
-<!--                </div>-->
-<!--            </div>-->
             <div class="form-group row text-info">
                 <label for="waterTemp" class="col-sm-2 col-form-label">Температура на водата</label>
                 <div class="col-sm-10">
@@ -123,20 +102,17 @@
                 </div>
             </div>
 
-            <button type="submit" class="btn btn-dark text-info bg-dark w-20 mb-5">ИЗЧИСЛИ</button>
+            <button th:replace="fragments/commons::CALCULATE">ИЗЧИСЛИ</button>
 
         </form>
 
     </div>
 
     <th:block sec:authorize="isAuthenticated()">
-        <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning"
-           th:href="@{/my-calculations}"
-           role="button">КЪМ МОИТЕ ИЗЧИСЛЕНИЯ</a>
+        <a th:replace="fragments/commons::toMyEquations"></a>
     </th:block>
 
-    <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning" href="/"
-       role="button">КЪМ НАЧАЛНА СТРАНИЦА</a>
+    <a th:replace="fragments/commons::toHomePage"></a>
 
 </main>
 <footer th:replace="fragments/commons::footer"></footer>
