--- a/src/main/resources/templates/my-calculations.html
+++ b/src/main/resources/templates/my-calculations.html
@@ -57,9 +57,7 @@
 
     </div>
 
-    <a class="btn btn-dark btn-block btn-info bg-dark text-warning align-content-center mt-3 border border-warning"
-       href="/"
-       role="button">КЪМ НАЧАЛНА СТРАНИЦА</a>
+    <a th:replace="fragments/commons::toHomePage"></a>
 
 </main>
 <footer th:replace="fragments/commons::footer"></footer>
