--- a/src/main/resources/templates/users-login.html
+++ b/src/main/resources/templates/users-login.html
@@ -12,7 +12,7 @@
 
             <form
                     th:action="@{/users/login}"
-                    method="post">
+                    th:method="POST">
                 <div>
                     <div class="col-auto">
                         <label for="inputUsername" class="col-form-label ">Потребителско име</label>
