--- a/src/main/resources/templates/pipe-PE-input.html
+++ b/src/main/resources/templates/pipe-PE-input.html
@@ -110,7 +110,7 @@
                 <label for="waterTemp" class="col-sm-2 col-form-label">Температура на водата</label>
                 <div class="col-sm-10">
                     <select
-                            th:field="*{temperatures}"
+                            th:field="*{temperature}"
                             th:errorclass="is-invalid"
                             id="waterTemp" name="waterTemp" class="custom-select"
                             aria-describedby="categoryHelpInline">
