--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -12,10 +12,10 @@
                 <div class="profile-card p-3 py-4 text-warning bg-info">
                     <div class="text-center"><img src="/images/myLogo.png" width="100" class="rounded-circle"></div>
 
-                    <div class="text-center mt-5 bg-info" >
-<!--                        <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>-->
-<!--                        <h5 class="mt-4 mb-0">Full name</h5>-->
-<!--                        <span >UI/UX Designer</span>-->
+                    <div class="text-center mt-5 bg-info">
+                        <!--                        <span class="bg-secondary p-1 px-4 rounded text-white">Pro</span>-->
+                        <!--                        <h5 class="mt-4 mb-0">Full name</h5>-->
+                        <!--                        <span >UI/UX Designer</span>-->
 
                         <h5 class="mt-2 mb-0">ПОТРЕБИТЕЛ</h5>
                         <span th:object="${editedUser}" th:text="*{username}">Потребител</span>
@@ -23,33 +23,33 @@
                         <h5 class="mt-2 mb-0">РОЛИ</h5>
                         <span th:object="${editedUserRoles}" th:text="${editedUserRoles}">Роли</span>
 
-<!--                        <h5 class="mt-2 mb-0">Age</h5>-->
-<!--                        <span>33</span>-->
+                        <!--                        <h5 class="mt-2 mb-0">Age</h5>-->
+                        <!--                        <span>33</span>-->
 
-<!--                        <div class="px-4 mt-5">-->
-<!--                            <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum-->
-<!--                                optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque-->
-<!--                                nesciunt quis rerum sunt suscipit. </p>-->
-<!--                        </div>-->
+                        <!--                        <div class="px-4 mt-5">-->
+                        <!--                            <p class="fonts">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim et nostrum-->
+                        <!--                                optio perferendis quam quod ratione rem sit soluta ut! A dolor laborum, maiores neque-->
+                        <!--                                nesciunt quis rerum sunt suscipit. </p>-->
+                        <!--                        </div>-->
 
-<!--                        <ul class="social-list">-->
-<!--                            <li><i class="fab fa-facebook-square"></i></li>-->
-<!--                            <li><i class="fab fa-instagram"></i></li>-->
-<!--                            <li><i class="fab fa-linkedin"></i></li>-->
-<!--                            <li><i class="fab fa-google"></i></li>-->
-<!--                        </ul>-->
-<!--                        <div class="buttons">-->
-<!--                            <button class="btn btn-outline-primary px-4">Back</button>-->
-<!--                            &lt;!&ndash;                            <button class="btn btn-primary px-4 ms-3">Contact</button>&ndash;&gt;-->
-<!--                        </div>-->
-                        <a class="btn btn-dark btn-block btn-warning bg-info text-warning align-content-center mt-5 border border-warning"
-                           href="/users/edit"
-                           role="button">РЕДАКТИРАЙ ОТНОВО</a>
+                        <!--                        <ul class="social-list">-->
+                        <!--                            <li><i class="fab fa-facebook-square"></i></li>-->
+                        <!--                            <li><i class="fab fa-instagram"></i></li>-->
+                        <!--                            <li><i class="fab fa-linkedin"></i></li>-->
+                        <!--                            <li><i class="fab fa-google"></i></li>-->
+                        <!--                        </ul>-->
+                        <!--                        <div class="buttons">-->
+                        <!--                            <button class="btn btn-outline-primary px-4">Back</button>-->
+                        <!--                            &lt;!&ndash;                            <button class="btn btn-primary px-4 ms-3">Contact</button>&ndash;&gt;-->
+                        <!--                        </div>-->
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <a class="btn btn-dark btn-block btn-warning bg-info text-warning align-content-center mt-5 border border-warning"
+       href="/users/edit"
+       role="button">РЕДАКТИРАЙ ПАК</a>
     <a th:replace="fragments/commons::toHomePage"></a>
 </main>
 </body>
