adding new functionalities.

--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -55,7 +55,7 @@
                            th:href="@{/users/login}">ВХОД</a>
                     </li>
                     <li>
-                        <a sec:authorize="!isAuthenticated()" class="bg-info text-white" th:href="@{/calc-pipe-DI}">ПО ВЪТРЕШЕН ДИАМЕТЪР</a>
+                        <a sec:authorize="!isAuthenticated()" class="bg-info text-white" th:href="@{/catalog}">ДИАМЕТРИ</a>
                     </li>
                 </th:block>
             </ul>
