--- a/src/main/resources/templates/pipe-edit-ID.html
+++ b/src/main/resources/templates/pipe-edit-ID.html
@@ -99,7 +99,7 @@
                 </div>
             </div>
 
-            <button th:replace="fragments/commons::CALCULATE">ИЗЧИСЛИ</button>
+            <button type="submit" class="btn btn-dark text-info bg-dark w-20 mb-5 border border-info">РЕДАКТИРАЙ DI</button>
 
         </form>
 
